--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 timeout: 1200s
 substitutions:
-  _REGION: us-central1
-  _CLUSTER:  sina-cluster-gke
+  _REGION: us-west1
+  _CLUSTER:  spz-dev-cluster
+  _PROJECTID: poetic-primer-369601 
 steps:
   - name: gcr.io/cloud-builders/kubectl
     id: Configure kubectl
@@ -10,6 +11,7 @@ steps:
     env:
       - CLOUDSDK_COMPUTE_REGION=$_REGION
       - CLOUDSDK_CONTAINER_CLUSTER=$_CLUSTER
+      - PROJECT_ID=$_PROJECTID
       - KUBECONFIG=/workspace/.kube/config
       
   - name: gcr.io/cloud-builders/kubectl
@@ -18,6 +20,7 @@ steps:
     env:
       - CLOUDSDK_COMPUTE_REGION=$_REGION
       - CLOUDSDK_CONTAINER_CLUSTER=$_CLUSTER
+      - PROJECT_ID=$_PROJECTID
       - KUBECONFIG=/workspace/.kube/config
       
   - name: gcr.io/cloud-builders/kubectl
